--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "workbench.colorCustomizations": {
-        "activityBar.background": "#4F1F0F",
-        "titleBar.activeBackground": "#6F2B15",
-        "titleBar.activeForeground": "#FDF8F7"
+        "activityBar.background": "#4C1F1F",
+        "titleBar.activeBackground": "#6B2C2C",
+        "titleBar.activeForeground": "#FEFCFC"
     }
 }
